- On the Master-Detail style UI, the scrolled point in Master display can be retrieved when the page
  is backed from the Detail display.
- Add "CWPKit" in "lib" directory for FileMaker Server to remove a dependency of FX.php in the future.
- Customizing X-Frame-Options and Content-Security-Policy headers in the params.php file.
- [BUG FIX] Fix the issue of MediaAccess class and the file upload component when using the Native
  Authentication for mobile devices. The affected version is 5.3 only.
- [BUG FIX] INTERMediatorOnPage.defaultBackgroundImage affects as expected.
- [BUG FIX] String array value for single value operator works fine.
- [BUG FIX] Modify the value of INTERMediatorOnPage.getIMRootPath on Windows Server.
- [BUG FIX] Update FX.php to fix compatibility with authentication for FileMaker Server.
- [BUG FIX] Enrolment methods had a bug in case of FileMaker Server with issuedhash for SQLite.
- [BUG FIX] When the text field bond to local context didn't update calculated property.

Ver.5.3 (February 21, 2016)
- Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
  in the Auth_Support directory.
- Master/Detail style UI (controlled by 'navi-control' key) support mobile environment ex. JQuery Mobile.
  The Samples/Sample_Mobile folder includes some demos for mobile device.
- SQL aggregation can be defined as a read-only context. The aggregation-select,
  aggregation-from, aggregation-group-by key are added.
- The database update communucations (Create, Update, Delete, Copy) are working in asynchronous mode.
- MediaAccess class can consider EXIF orientation in a JPEG file (require Exif and GD extension
  for PHP).
- Generic enclosure/repeater mechanism is implemented. See Sample_forDebugging/genericrepeater.html
  or the link "generic enclosure/repeater" in "Debugging" row of the sample portal page.
- Update phpseclib to version 1.0.0.